Begin pulling data from websites.

--- a/vehicle_price_exploration.ipynb
+++ b/vehicle_price_exploration.ipynb
@@ -28,14 +28,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<!DOCTYPE html>\r",
+      "<html lang=\"en\">\r",
+      "<head>\r",
+      "<meta charset=\"utf-8\" />\r",
+      "<title>Buy a Used Ford near Atascosa, TX | Pre-Owned Ford Cars & Trucks</title>\r",
+      "<!-- Meta Tags -->\r",
+      "<meta name=\"description\" content=\"Shop for a used Ford car, truck or SUV at McCombs Ford West. Our Ford dealership near Atascosa, TX, has a large inventory of used Ford vehicles, including pre-owned Ford F-150 trucks and Ford Mustang mo\n"
+     ]
+    }
+   ],
+   "source": [
+    "new_or_used = 'U'\n",
+    "year = '2018'\n",
+    "make = 'Ford'\n",
+    "model = 'F-150'\n",
+    "\n",
+    "url = f'https://www.mccombsfordwest.com/searchused.aspx?Type={new_or_used}&Year={year}&Make={make}&Model={model}'\n",
+    "# headers = {'User-Agent': 'Codeup Ada Data Science'} # codeup.com doesn't like our default user-agent\n",
+    "response = get(url)\n",
+    "\n",
+    "print(response.text[:400])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = 'https://www.mccombsfordwest.com/searchused.aspx?Type=U&Year=2018&Make=Ford&Model=F-150'\n",
-    "headers = {'User-Agent': 'Codeup Ada Data Science'} # codeup.com doesn't like our default user-agent\n",
-    "response = get(url, headers=headers)"
+    "soup = BeautifulSoup(response.content, 'html.parser')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    2018 Ford F-150 Limited    \n",
+      "    2018 Ford F-150 LARIAT    \n",
+      "    2018 Ford F-150    \n",
+      "    2018 Ford F-150 LARIAT    \n",
+      "    2018 Ford F-150 2WD    \n",
+      "    2018 Ford F-150 LARIAT    \n",
+      "    2018 Ford F-150 XL    \n",
+      "    2018 Ford F-150 XLT    \n",
+      "    2018 Ford F-150 STX    \n",
+      "    2018 Ford F-150 XLT    \n",
+      "    2018 Ford F-150 XL    \n",
+      "    2018 Ford F-150 XL    \n",
+      "    2018 Ford F-150 XLT    \n",
+      "    2018 Ford F-150 XL    \n"
+     ]
+    }
+   ],
+   "source": [
+    "vehicle_titles = soup.find_all('div', class_='row vehicleTitleContainer visible-xs')\n",
+    "for vehicle_title in vehicle_titles:\n",
+    "    print(vehicle_title.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
