Start putting together for loop. To gather all components in one go.

--- a/vehicle_price_exploration.ipynb
+++ b/vehicle_price_exploration.ipynb
@@ -69,34 +69,195 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    2018 Ford F-150 Limited    \n",
-      "    2018 Ford F-150 LARIAT    \n",
-      "    2018 Ford F-150    \n",
-      "    2018 Ford F-150 LARIAT    \n",
-      "    2018 Ford F-150 2WD    \n",
-      "    2018 Ford F-150 LARIAT    \n",
-      "    2018 Ford F-150 XL    \n",
-      "    2018 Ford F-150 XLT    \n",
-      "    2018 Ford F-150 STX    \n",
-      "    2018 Ford F-150 XLT    \n",
-      "    2018 Ford F-150 XL    \n",
-      "    2018 Ford F-150 XL    \n",
-      "    2018 Ford F-150 XLT    \n",
-      "    2018 Ford F-150 XL    \n"
-     ]
+     "data": {
+      "text/plain": [
+       "['2018 Ford F-150 Limited',\n",
+       " '2018 Ford F-150 LARIAT',\n",
+       " '2018 Ford F-150',\n",
+       " '2018 Ford F-150 LARIAT',\n",
+       " '2018 Ford F-150 2WD',\n",
+       " '2018 Ford F-150 LARIAT',\n",
+       " '2018 Ford F-150 XL',\n",
+       " '2018 Ford F-150 XLT',\n",
+       " '2018 Ford F-150 STX',\n",
+       " '2018 Ford F-150 XLT',\n",
+       " '2018 Ford F-150 XL',\n",
+       " '2018 Ford F-150 XL',\n",
+       " '2018 Ford F-150 XLT',\n",
+       " '2018 Ford F-150 XL']"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "vehicle_titles = soup.find_all('div', class_='row vehicleTitleContainer visible-xs')\n",
+    "\n",
+    "vehicle_titles_list = []\n",
     "for vehicle_title in vehicle_titles:\n",
-    "    print(vehicle_title.text)"
+    "    vehicle_titles_list.append(vehicle_title.text.strip())\n",
+    "vehicle_titles_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['$49,998',\n",
+       " '$42,992',\n",
+       " '$41,992',\n",
+       " '$37,992',\n",
+       " '$36,999',\n",
+       " '$36,992',\n",
+       " '$35,988',\n",
+       " '$34,988',\n",
+       " '$33,992',\n",
+       " '$32,992',\n",
+       " '$30,998',\n",
+       " '$30,988',\n",
+       " '$28,990',\n",
+       " '$27,202']"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prices = soup.find_all('span', class_='pull-right primaryPrice')\n",
+    "\n",
+    "price_list = []\n",
+    "for price in prices:\n",
+    "    price_list.append(price.text)\n",
+    "    \n",
+    "j = 1\n",
+    "for i, price in enumerate(price_list):\n",
+    "    if price_list[i] == price_list[j]:\n",
+    "        del price_list[i]\n",
+    "    j += 1\n",
+    "        \n",
+    "price_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(price_list) == len(vehicle_titles_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Body Style: Crew Cab Pickup',\n",
+       " 'Body Style: Crew Cab Pickup',\n",
+       " 'Body Style: Crew Cab Pickup',\n",
+       " 'Body Style: Crew Cab Pickup',\n",
+       " 'Body Style: Crew Cab Pickup',\n",
+       " 'Body Style: Crew Cab Pickup',\n",
+       " 'Body Style: Crew Cab Pickup',\n",
+       " 'Body Style: Crew Cab Pickup',\n",
+       " 'Body Style: Crew Cab Pickup',\n",
+       " 'Body Style: Crew Cab Pickup',\n",
+       " 'Body Style: Crew Cab Pickup',\n",
+       " 'Body Style: Crew Cab Pickup',\n",
+       " 'Body Style: Crew Cab Pickup',\n",
+       " 'Body Style: Crew Cab Pickup']"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "body_styles = soup.find_all('li', class_='bodyStyleDisplay')\n",
+    "\n",
+    "body_style_list = []\n",
+    "for style in body_styles:\n",
+    "    body_style_list.append(style.text)\n",
+    "    \n",
+    "j = 1\n",
+    "for i, style in enumerate(body_style_list):\n",
+    "    if body_style_list[i] == body_style_list[j]:\n",
+    "        del body_style_list[i]\n",
+    "    j += 1\n",
+    "        \n",
+    "body_style_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Engine: 3.5L V6 24V PDI DOHC Twin Turbo',\n",
+       " 'Engine: 3.5L V6 24V PDI DOHC Twin Turbo',\n",
+       " 'Engine: 3.5L V6 24V PDI DOHC Twin Turbo',\n",
+       " 'Engine: 2.7L V6 24V PDI DOHC Twin Turbo',\n",
+       " 'Engine: 2.7L V6 24V PDI DOHC Twin Turbo',\n",
+       " 'Engine: 5.0L V8 32V PDI DOHC',\n",
+       " 'Engine: 6 Cyl - 3.5 L',\n",
+       " 'Engine: 5.0L V8 32V PDI DOHC',\n",
+       " 'Engine: 2.7L V6 24V PDI DOHC Twin Turbo',\n",
+       " 'Engine: 2.7L V6 24V PDI DOHC Twin Turbo',\n",
+       " 'Engine: 2.7L V6 24V PDI DOHC Twin Turbo',\n",
+       " 'Engine: 3.5L V6 24V PDI DOHC Twin Turbo',\n",
+       " 'Engine: 8 Cyl - 5.0 L',\n",
+       " 'Engine: 3.3L V6 24V PDI DOHC Flexible Fuel']"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "engines = soup.find_all('li', class_='engineDisplay')\n",
+    "\n",
+    "engine_list = []\n",
+    "for style in engines:\n",
+    "    engine_list.append(style.text)\n",
+    "    \n",
+    "j = 1\n",
+    "for i, style in enumerate(engine_list):\n",
+    "    if engine_list[i] == engine_list[j]:\n",
+    "        del engine_list[i]\n",
+    "    j += 1\n",
+    "        \n",
+    "engine_list"
    ]
   },
   {
@@ -104,7 +265,24 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dict_of_lists = {}\n",
+    "\n",
+    "for component in []:\n",
+    "    returned_html = soup.find_all('li', class_=component)\n",
+    "\n",
+    "    _list = []\n",
+    "    for style in body_styles:\n",
+    "        _list.append(style.text)\n",
+    "\n",
+    "    j = 1\n",
+    "    for i, style in enumerate(_list):\n",
+    "        if _list[i] == _list[j]:\n",
+    "            del _list[i]\n",
+    "        j += 1\n",
+    "\n",
+    "    dict_of_lists[f'{component}_list'] = _list"
+   ]
   }
  ],
  "metadata": {
