Complete functionality for Ford dealerships. Still need to add functionality for other domains. Pagination should be working.

--- a/vehicle_price_exploration.ipynb
+++ b/vehicle_price_exploration.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from bs4 import BeautifulSoup\n",
     "from requests import get\n",
-    "import re"
+    "import re\n",
+    "import math"
    ]
   },
   {
@@ -22,21 +23,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<Response [200]>\n"
+     ]
+    }
+   ],
    "source": [
     "new_or_used = 'all'\n",
-    "year = '2019'\n",
+    "year = '2018'\n",
     "make = 'Ford'\n",
     "model = 'F-150'\n",
     "domain = 'mccombsfordwest.com'\n",
+    "# headers = {'User-Agent': 'Mozilla/5.0 (Windows NT 6.1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/41.0.2228.0 Safari/537.36'}\n",
     "\n",
-    "url = f'https://www.mccombsfordwest.com/searchall.aspx?Year=2019&Make=Ford&Model=F-150&pn=100'\n",
+    "url = 'https://www.ancirakiasa.com/searchall.aspx?Year=2019,2018&Make=Ford&Model=F-150&pn=100'\n",
     "# headers = {'User-Agent': 'Codeup Ada Data Science'} # codeup.com doesn't like our default user-agent\n",
     "response = get(url)\n",
     "\n",
-    "print(response.text[:400])"
+    "print(response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "soup = BeautifulSoup(response.content, 'html.parser')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'(0 - 0 of 0 Vehicles)'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "phrase = soup.find('p', class_='srpVehicleCount').text.strip()\n",
+    "phrase"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['0']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "re.findall(r'(\\d+) Vehicles', phrase)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "math.ceil(int(re.findall(r'(\\d+) Vehicles', phrase)[0])/100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-7-9590190e43d7>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-7-9590190e43d7>\"\u001b[1;36m, line \u001b[1;32m3\u001b[0m\n\u001b[1;33m    grab new url\u001b[0m\n\u001b[1;37m           ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "number_of_pages = math.ceil(int(re.findall(r'\\(1 -  of (\\d+)', soup.find('p', class_='srpVehicleCount').text.strip())[0])/100)\n",
+    "if number_of_pages > 1:\n",
+    "    grab new url\n",
+    "    change url\n",
+    "    run through functions again but append to existing lists, DO NOT CREATE NEW ONES\n",
+    "    repeat"
    ]
   },
   {
@@ -45,8 +150,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "soup = BeautifulSoup(response.content, 'html.parser')"
+    "math.ceil(1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -314,6 +426,80 @@
     "\n",
     "    dict_of_component_lists[f'{component}_list'] = list_of_text"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = 'https://www.worldcarkianorth.com/search/used/tp-lc3811/?q=toyota+camry&cy=78201&lc=3811&tp=used'\n",
+    "print(url)\n",
+    "response = get(url)\n",
+    "soup = BeautifulSoup(response.content, 'html.parser')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type(response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "requests.models.Response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type(response.status_code)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range (1, 2+1):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "soup.find('ul', class_='pagination margin-x').find_all('a')[1]['href']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
